--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bptech",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.19.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -11,7 +14,7 @@
     "disqus-react": "^1.0.11",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
-    "node-sass": "^7.0.1",
+    "node-sass": "^4.14.1",
     "parallax-js": "^3.1.0",
     "react": "^17.0.1",
     "react-countup": "^4.3.3",
@@ -37,7 +40,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ignore-path .gitignore . --ext js --ext jsx",
+    "lint:fix": "npm run lint --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -57,5 +62,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0"
+  }
 }
